<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.quemfaz.fragments.LoginFragment"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">


        <EditText
            android:id="@+id/nomeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:layout_marginBottom="@dimen/edit_text_marging"
            android:layout_marginTop="@dimen/edit_text_marging"/>


        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_marginBottom="@dimen/edit_text_marging"
            android:layout_marginTop="@dimen/edit_text_marging"/>


        <EditText
            android:id="@+id/passwordEditText"
            android:password="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:layout_marginBottom="@dimen/edit_text_marging"
            android:layout_marginTop="@dimen/edit_text_marging"/>


        <Button
            android:id="@+id/cadastrarButton"
            android:layout_width="@dimen/login_button_size"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:layout_marginBottom="@dimen/edit_text_marging"
            android:layout_marginTop="@dimen/login_button_margin_top"/>


        <!--TextView
            android:id="@+id/facebookText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_facebook"
            android:layout_marginBottom="@dimen/edit_text_marging"
            android:layout_marginTop="@dimen/edit_text_marging"/>

        <com.facebook.widget.LoginButton
            android:layout_width="@dimen/login_button_size"
            android:layout_height="wrap_content"
            android:text="@string/facebook"/-->


</LinearLayout>
