<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/nome_estabelecimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:hint="@string/nome_estabelecimento"
        android:layout_marginBottom="@dimen/edit_text_marging"
        android:layout_marginTop="@dimen/edit_text_marging"/>
    
    <EditText
        android:id="@+id/descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descricao_estabelecimento"
        android:layout_marginBottom="@dimen/edit_text_marging"
        android:layout_marginTop="@dimen/edit_text_marging"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/edit_text_marging"
        android:layout_marginTop="@dimen/edit_text_marging"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria_estabelecimento"
            android:textSize="@dimen/text_size"
            android:textColor="#808080"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        </LinearLayout>

    
    <ImageView
        android:id="@+id/foto_estabelecimento"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="@dimen/edit_text_marging"
        android:layout_marginTop="@dimen/edit_text_marging"/>


</LinearLayout>